test/trivial/bradc/localConfig.good
localConfig.chpl:3: In function 'main':
localConfig.chpl:4: error: configuration variables only legal at module scope
